reorganised and new gui